@@ -1,7 +1,8 @@
 #!/usr/bin/env perl
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 11;
+#use Test::More plan => qw/no_plan/;
 
 my @calls;
 
@@ -19,6 +20,38 @@ do {
 
     rewrite quux => 'bar';
     rewrite qr/^quux-(.*)/ => sub { "bar:$1" };
+
+    on alpha => sub {
+        push @calls, "alpha"
+    };
+
+    under alpha => sub {
+    #    $Path::Dispatcher::Declarative::UNDER_RULE->add_rule(
+    #        Path::Dispatcher::Rule::Always->new(
+    #            stage => 'on',
+    #            block  => sub {
+    #                print "alpha (chain) ";
+    #                next_rule;
+    #            },
+    #        ),
+    #    );
+        then {
+            push @calls, "alpha (chain) "; 
+        };
+        on one => sub {
+            push @calls, "one";
+        };
+
+        then {
+            push @calls, "(before two or three) ";
+        };
+        on two => sub {
+            push @calls, "two";
+        };
+        on three => sub {
+            push @calls, "three";
+        };
+    };
 };
 
 ok(MyApp::Dispatcher->isa('Path::Dispatcher::Declarative'), "use Path::Dispatcher::Declarative sets up ISA");
@@ -47,3 +80,14 @@ is_deeply([splice @calls], [
 MyApp::Dispatcher->run('Token Matching');
 is_deeply([splice @calls], [], "token matching is by default case sensitive");
 
+MyApp::Dispatcher->run('alpha');
+is_deeply([splice @calls], ['alpha']);
+
+MyApp::Dispatcher->run('alpha one');
+is_deeply([splice @calls], ['alpha (chain) ', 'one']);
+
+MyApp::Dispatcher->run('alpha two');
+is_deeply([splice @calls], ['alpha (chain) ', '(before two or three) ', 'two']);
+
+MyApp::Dispatcher->run('alpha three');
+is_deeply([splice @calls], ['alpha (chain) ', '(before two or three) ', 'three']);
